# aws_lambda_and_api_gateway_in_rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: aws.rs  io.rs  main.rs
