[package]
edition = "2021"
name = "test_lambda"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4"
lambda_http = "0.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1"
tokio = {version = "1", features = ["full"]}
